2007-12-11  Philip Van Hoof <pvanhoof@gnome.org>

	* Repeated the bugfix of Sergio to the other locations where the same
	technique was wrongfully used.

2007-12-11  Milko Krachounov <milko@3mhz.net>

	* Committed by Philip Van Hoof
	* Bugfix in TnyGtkTextBufferStream

2007-12-11  Sergio Villar Senin  <svillar@gmail.com>

	* libtinymail-camel/tny-camel-folder.c:
	Fixed an small leak when notifying folder observers	
	* libtinymail/tny-folder.[ch]
	libtinymail/tny-shared.h
	libtinymail-camel/tny-camel-folder.[ch]
	libtinymail-camel/tny-camel-store-account.[ch]:
	Added a new function tny_folder_store_create_folder_async that creates
	folders asynchronously

2007-12-09  Dirk-Jan C. Binnema <djcb@djcbsoftware.nl>

	* optimization :) for NULL strings in decode_it 

2007-12-08  Jürg Billeter  <j@bitron.ch>

	* bindings/vala/README: Add some information about the Vala bindings

2007-12-08  Jürg Billeter  <j@bitron.ch>

	* bindings/Makefile.am:
	* bindings/vala/:
	* configure.ac:
	* tests/Makefile.am:
	* tests/vala-demo/Makefile.am:
	* tests/vala-demo/tinymail-vala-test.vala:

	Add experimental Vala bindings and test application, disabled by
	default.

2007-12-08  Jürg Billeter  <j@bitron.ch>

	* libtinymail/tny.h, libtinymailui/tnyui.h: remove internal files

2007-12-08  Jürg Billeter  <j@bitron.ch>

	* ChangeLog: use UTF-8 for all entries

2007-12-07  Philip Van Hoof  <pvanhoof@gnome.org>

	* Fixed the BODY fetcher to cope with unsolicited responses
	* Fixed decoding of message headers in TnyMsg type

2007-12-05  Philip Van Hoof  <pvanhoof@gnome.org>

	* Merged all of devel/pvanhoof/bs branch back
	* Disabled the bodystruct mime part and fetching for now
	* Made the bodystructure stuff optional. The configure magic is
	--enable-imap-part-fetch

2007-12-04  Jose Dapena Paz  <jdapena@igalia.com>

	* libtinymail-camel/tny-camel-send-queue.c:
	Mark all sent messages as seen just before moving them
	to sentbox.

2007-12-03  Loïc Minier  <lool@dooz.org>
