@@ -1,3 +1,7 @@
+2007-12-12  Philip Van Hoof <pvanhoof@gnome.org>
+
+	* Experimental appending in stead of rewriting the summary.mmap
+
 2007-12-11  Philip Van Hoof <pvanhoof@gnome.org>
 
 	* Repeated the bugfix of Sergio to the other locations where the same
